--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		<section class="text">
 			<p>
 				A <b>computer science and engineering</b> bachelor candidate,
-				with <em>2 years</em> of learning experience in data science and software engineering and 
-				proficiency in using Java, C, C++, Python, and SQL.
+				with <em>2 years</em> of learning experience in data science and software engineering 
+				and proficiency in using Java, C, C++, Python, and SQL.
 				<br><br>
 				<span id="annotation">
 					there will be more summary!
@@ -53,6 +53,7 @@
 				<figcaption id="figure2">Figure2: just a meme</figcaption>
 			</picture>
 		</section>
+
 		<hr>
 
 		<h2>EDUCATION</h2>
@@ -94,7 +95,10 @@
 				<select name="courses" id="courses">
 				  <optgroup label="CSE">
 					<option>CSE100</option>
-					<option>CSE150</option>
+					<option>CSE150B</option>
+					<option>CSE151A</option>
+					<option>CSE158</option>
+					<option>CSE132A</option>
 				  </optgroup>
 				</select>
 				<br>
@@ -127,7 +131,7 @@
 			<strong>Please type in your recommendations for this website</strong>
 		</label>
 		<br>
-		<textarea id="box" name="birthday" rows="5" cols="80">recommendations:</textarea>
+		<textarea id="box" name="birthday" rows="5">recommendations:</textarea>
 		<br>
 		<input id="submit" type="submit" value="Submit">
 		<br>
