--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
 				<li>
 					In-depth learning of Python, Java, C, and C++ languages with 
-					8 hours + weekly training experience on code training platforms.
+					<i>8 hours +</i> weekly training experience on code training platforms.
 				</li>
 
 				<li>
 					<details>
-						<summary>CSE100: Advanced Data Structures</summary>
-						<p>
+						<summary><strong>CSE100:</strong> Advanced Data Structures</summary>
+						<p id="text-100">
 							sophisticated description of multiple data structures in computer science, including tree, hash, and searching algorithms. 
 							Compared with my counterparts, I can proficiently utilize appropriate algorithms to achieve the same functionality in less time and with less complexity. 
 						</p>
@@ -79,8 +79,8 @@
 
 				<li>
 					<details>
-						<summary>CSE150B: Intro to deep learning</summary>
-						<p>
+						<summary><strong>CSE150B:</strong> Intro to deep learning</summary>
+						<p id="text-150B">
 							Implementation of A* searching algorithm, Markov decision tree, Monte Carlo simulation, and other deep learning methods. 
 							Few of my counterparts have experience in writing learning small games, 
 							including 2048 or blackjack, and I have an advantage over them by having these valuable experiences.
@@ -109,16 +109,20 @@
 		<section class="skills">
 			<ul>
 				<li>
-					Machine Learning: Well-versed in manipulating multiple machine learning algorithms including KNN, L1&L2 regularization, and gradient optimization. 
+					<strong>Machine Learning:</strong> 
+					Well-versed in manipulating multiple machine learning algorithms including KNN, L1&L2 regularization, and gradient optimization. 
 				</li>
 				<li>
-					Algorithms: Proficient in multiple searching algorithms including Dijkstra, A*, and quick sort.
+					<strong>Algorithms:</strong>
+					Proficient in multiple searching algorithms including Dijkstra, A*, and quick sort.
 				</li>
 				<li>
-					Reinforcement Learning: mastered in manipulating multiple deep learning algorithms including reinforcement learning, Q-learning, and Markov decision tree.
+					<strong>Reinforcement Learning:</strong> 
+					mastered in manipulating multiple deep learning algorithms including reinforcement learning, Q-learning, and Markov decision tree.
 				</li>
 				<li>
-					Data Management: capable of understanding SQL statements and processing data using SQL commands.
+					<strong>Data Management:</strong> 
+					capable of understanding SQL statements and processing data using SQL commands.
 				</li>
 			</ul>
 		</section>
