--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
 	<header>
-		<section class="head">
-			<img id="gif" src="images/ucsd.gif" title="UCSD" alt="a gif of UCSD"></iframe>
+		<figure id="head">
+			<img id="gif" src="images/ucsd.gif" title="UCSD" alt="a gif of UCSD"></img>
 			<figcaption id="figure1">Figure1: just a gif</figcaption>
-		</section>
+		</figure>
 		<hr>
 		<h1>YIFEI WANG</h1>
 		<section class="intro">
@@ -48,10 +48,10 @@
 					there will be more summary!
 				</span>
 			</p>
-			<picture>
+			<figure id="figure2">
 				<img id="self-image" src="images/pic.jpg" alt="an offensive meme" title="rabbit">
-				<figcaption id="figure2">Figure2: just a meme</figcaption>
-			</picture>
+				<figcaption id="text2">Figure2: just a meme</figcaption>
+			</figure>
 		</section>
 
 		<hr>
