--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<figure id="head">
-			<img id="gif" src="images/ucsd.gif" title="UCSD" alt="a gif of UCSD"></img>
+			<img id="gif" src="images/ucsd.gif" title="UCSD" alt="a gif of UCSD">
 			<figcaption id="figure1">Figure1: just a gif</figcaption>
 		</figure>
 		<hr>
